@@ -4,6 +4,8 @@ LIST OF CHANGES
 release 56.0.1
  - ensure that the paths serived from the archive directory in
    different parts run_is_deletable utility are consistent.
+ - add autosome stats file to product release
+ - add missing bait prune to seq_alignment
 
 release 56.0.0
  - add autosome target to seq_alignment
